feat: refactor ID generation to use IdUtils for unique identifiers in CastMemberID, CategoryID, and GenreID